# apillon-phala-demo

./: .env  .env.sample  .eslintrc  .gitignore  .prettierignore  .prettierrc  README.md  buildspec.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.kalmia.json  vite.config.ts
contract/: Cargo.toml  README.md
contract/.run/: Test phat_crypto__tests.run.xml
contract/abis/: moonbase_nft_abi.json
contract/src/: error.rs  lib.rs  utils.rs
data/: rust_vault_snippets.json
public/: browserconfig.xml  manifest.json
src/: App.vue  auto-imports.d.ts  components.d.ts  env.d.ts  main.ts
src/assets/: main.css  transitions.css
src/assets/css/: main.css  tooltip.css  typography.css
src/components/: Btn.vue  DropFile.vue  Header.vue  NftCard.vue  SvgInclude.vue
src/components/Animation/: AnimatedImage.vue
src/components/Form/: DropFile.vue
src/components/general/: Btn.vue  Modal.vue  SvgInclude.vue
src/components/general/Animation/: AnimatedImage.vue  Icons.vue  Loader.vue  Spinner.vue
src/components/general/Form/: DropFile.vue  Wallet.vue
src/components/parts/: ConnectWallet.vue  Footer.vue  Header.vue  NftCard.vue  Nfts.vue
src/composables/: useContract.ts  useTxWait.ts
src/config/: index.ts  types.ts
src/lib/: abi.ts
src/lib/config/: general.config.ts
src/lib/types/: general.types.ts
src/lib/utils/: helpers.ts  phala-utils.ts  phala.ts  strings.ts  wallet-utils.ts
src/lib/values/: general.values.ts
src/pages/: index.vue
src/router/: index.ts
src/utils/: phala-utils.ts  wallet-utils.ts
src/views/: MainView.vue
