[package]
name = "rust_vault_snippets"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
cipher =  { version = "0.4.4", default-features = false }
ink = { version = "4.0.1", default-features = false }

# Phala ink! extension
pink-extension = { version = "0.4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.0" }

aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }
 
pink-web3 = { version="0.20.2", default-features = false, features = ["pink", "signing"]} 
hex-literal = "0.4.1"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
libsecp256k1 = { version = "0.7.1", default-features = false}
ink_env = { version = "4.1.0", default-features = false}
hex = { version = "0.4.3", default-features = false}
binascii = "0.1.4"
log = "0.4.17"
serde_json = { version = "1.0.96", default-features = false, features = ["alloc"]}
pink-json = { version = "0.4.0", default-features = false }
ink_storage = { version = "4.2.0", default-features = false }

[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "pink" }

[dev-dependencies]
ink_e2e = "4.0.1"
pink-extension-runtime = "0.4"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["pink-web3/std", "ink/std", "scale/std", "scale-info/std", "pink-extension/std", "serde-json-core/std", "pink-json/std"]
# Conventionally, these are defined even if empty
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false     # Disable integer overflow checks.
lto = false                 # Enable full link-time optimization.

